2008-09-05 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b18

 * Fix: Imagemap
        - Position of Image were got wrong in IE with horizontal scrolling.
        - Init of canvas was done to early, broke display of maps in IE.

   Thanks to "Spack" from the forums for reporting this.

 * Fix: Use textfield again in phpNuke for ImageMap description.

 * Change: Layout and buttons/actions for Imagemap page.

 * Change: Reenabled KOI8-R

 * Change: Removed some unneeded PHP version check in isSupportedCharset
           as the minimum PHP is 4.1.0

2008-09-05 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b17

 * Fix: Link to comments overview on mainpage.

 * Fix: getCaptionDate when using exiftags.
        Use "Image Generated" first, then "Image Created".

 * Fix: Some wordings. Again thanks to Julien.

 * Change: Increased length for album names that gettruncated in
           select boxes for reorder and move. 

2008-08-28 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b16

 * FIX: unhtmlentities() changed 0 values to '',
        that broke sanitizeInput() and thus getRequestVar()

   I am very angry about my self,
   as this caused a lot trouble at various places.

2008-08-27 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b15

 * Fix: Gallery works now in turkish! HOOORAY !

   Thanks to katpatuka for fixing this LOONG outstanding bug.

2008-08-26 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b14

 * Fix: Removing album permission broken.

 * Change: Update Walter Zorns
		wz_tooltip.js to 5.20
		tip_balloon.js to 1.6

 * Fix: Line endings in wz_jsgraphics.js

 * Fix: Imagemaps were shown at wrong position due to bad

2008-08-25 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b13

 * Fix: FitToWindow in classic_sidebar.

2008-08-24 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b12

 * Change: New Icon for crop image, the previous was to confusing.

 * Change: Used yuicompressor to minimize prototype.js
           Added original file in src folder.

 * Fix: FitToWindow broken.
